@@ -5,7 +5,7 @@ import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.context.ConfigurableApplicationContext;
 
-import java.util.List;
+import java.util.Arrays;
 
 @SpringBootApplication
 public class FormLogin2Application {
@@ -13,8 +13,8 @@ public class FormLogin2Application {
 	public static void main(String[] args) {
 		final ConfigurableApplicationContext applicationContext = SpringApplication.run(FormLogin2Application.class, args);
 		final UserRepository userRepository = applicationContext.getBean(UserRepository.class);
-		userRepository.persist(new UserRepository.User("jan", "kowalski", List.of("ROLE_ADMIN")));
-		userRepository.persist(new UserRepository.User("stefan", "kisielewski", List.of("ROLE_USER")));
+		userRepository.persist(new UserRepository.User("jan", "kowalski", Arrays.asList("ROLE_ADMIN")));
+		userRepository.persist(new UserRepository.User("stefan", "kisielewski", Arrays.asList("ROLE_USER")));
 	}
 
 }
